Update education and skills information
The education section is updated to have correct information regarding degree and double major. The skills section has now been given a proper title.

--- a/css/main.css
+++ b/css/main.css
@@ -215,6 +215,11 @@ a:after {
 	color: white;
 }
 
+#skillswrap h1 {
+	font-size: 60px;
+	color: white;
+}
+
 #skillswrap h5, p {
 	color: white;
 }
